- Update favicon - Fix button design on iOS

--- a/src/components/subscribe/Subscribe.css
+++ b/src/components/subscribe/Subscribe.css
@@ -94,6 +94,8 @@
     display: inline-block;
     margin: 0;
     transition: all 0.23s ease-in-out 0s;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
 
 #mc-embedded-subscribe.button:hover {
